Creado mediante Colaboratory

--- a/manipulando_docx.ipynb
+++ b/manipulando_docx.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBWfflFjdmHSD8tEOnXZCL",
+      "collapsed_sections": [],
+      "mount_file_id": "1cjdDPUcTN-AAwqITdu3dfDsDAHtrUGMZ",
+      "authorship_tag": "ABX9TyOh/85wOnym5B3KTyLK7nMb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +29,26 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Nota: para instalar una librería externa, se usa el comando !pip install librería. Para actualizar una libería, se usa el comando !pip install --upgrade librería.\n",
+        "\n",
+        "Se debe eliminar la línea que tiene lo siguiente import exceptions\n"
+      ],
       "metadata": {
-        "id": "g6u0CYPlGstQ"
+        "id": "6inqN6O2UqFa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import docx\n"
+      ],
+      "metadata": {
+        "id": "c5_zTrAnJmVp"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 27,
+      "outputs": []
     }
   ]
 }
